change protractor version in package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "description": "Parallel tests protractor  =============",
   "main": "",
   "devDependencies": {
-    "protractor": "2.1.0"
+    "protractor": "^4.0.9"
   }
 }
