--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "JS-Protractor-Selenium",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Parallel tests protractor  =============",
-  "main": "",
-  "devDependencies": {
+  "main": "conf.js",
+  "dependencies": {
     "protractor": "^4.0.9"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mattdsauce/JS-Protractor2-Selenium.git"
+  },
+  "author": "",
+  "license": "ISC",
 }
