remove trailing comma

--- a/package.json
+++ b/package.json
@@ -12,5 +12,5 @@
     "url": "git+https://github.com/mattdsauce/JS-Protractor2-Selenium.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "ISC"
 }
